# DEOS-rs

./: .gitignore  README.md  armv7-unknown-deos-eabihf.json  flake.nix
examples/armv7l-hello-world/: Cargo.toml  README.md  armv7-unknown-deos-eabihf.json  build.rs  config.toml  deos_api.h
examples/armv7l-hello-world/src/: fmt.rs  lib.rs  main.rs
scripts/: Dockerfile  deos-rust-profile.sh  qemu-user-networking.patch  run-ddc-i-deos.sh
